expense-app/src/objects/Expense_Card__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CardDate__c</fullName>
        <label>Card Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Keeper__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Card Keeper</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expense Cards</relationshipLabel>
        <relationshipName>ExpenseCards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MonthlyExpense__c</fullName>
        <label>Monthly Expense</label>
        <referenceTo>Monthly_Expense__c</referenceTo>
        <relationshipLabel>Expense Cards</relationshipLabel>
        <relationshipName>ExpenseCards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expense Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EXP-{000000}</displayFormat>
        <label>Expense Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>